# food-order

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py
app/database/: sqlalchemy.py
app/dependency/: ioc_container.py
app/entity/: user.py
app/exceptions/: base_exception.py
app/fastapi/middleware/: sqlalchemy.py
app/models/: base_time_entity.py  user.py
app/repositories/: user_repository.py
app/repository/: user_repository.py
app/service/user/: user_command.py
app/user/entity/: user_entity.py
app/user/repository/: user_repository.py
app/user/service/v1/: user_service.py
app/utils/: password_encoder.py
core/: config.py
core/db/: sqlalchemy.py
core/dependency/: ioc_container.py
core/domains/user/entity/: user_entity.py
core/domains/user/enum/: user_enum.py
core/domains/user/exception/: user_exception.py
core/domains/user/repository/: user_repository.py
core/domains/user/usecase/v1/: user_use_case.py
core/domains/user/usecase/v1/dto/: user_dto.py
core/fastapi/middleware/: sqlalchemy.py
core/fastapi/middlewares/: sqlalchemy.py
core/persistence/models/: base_time.py  base_time_entity.py  user.py  user_entity.py  user_model.py
migrations/: env.py
migrations/versions/: 1383214c2653_add_status_user_model.py  5324b9e69210_modify_user_model.py  e728fbd84412_init_user_model.py
test/: conftest.py  test_user_repository.py
test/integration/repository/: test_user_repository.py
test/integration/service/: test_user_command.py
test/unit/db/: test_session.py
tests/: conftest.py  test_session.py  test_user_repository.py
tests/core/: conftest.py  test_session_context.py
tests/integration/repository/: test_user_respository.py
tests/integration/usecase/v1/: test_user_use_case.py
tests/unit/user/: test_password_encoder.py
