[tool.poetry]
name = "food-order"
version = "0.1.0"
description = ""
authors = ["hsw0905 <hsw0905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.22"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "^2.0.3"
cryptography = "^41.0.5"
alembic = "^1.12.1"
pymysql = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
